# minimind_from_scratch

./: .gitignore  README.md  inference.py  main.py  pyproject.toml  webui.py
.github/workflows/: ci.yml
artifacts/: benchmark.csv  benchmark.json  generation_samples.json  smoke_train.json
dataset/: __init__.py  lm_dataset.py
dataset/demo/: dpo_demo.jsonl  pretrain_demo.jsonl  rl_demo.jsonl  sft_demo.jsonl
model/: __init__.py  model.py  model_lora.py
scripts/: benchmark_attention.py  download_dataset.py  run_model.py  smoke_train.py  train_tokenizer.py
tests/: test_data_and_lora.py  test_inference.py  test_model.py  test_training.py
tokenizer/: tokenizer.json  tokenizer_config.json
trainer/: __init__.py  train_dpo.py  train_grpo.py  train_lora.py  train_ppo.py  train_pretrain.py  train_sft.py  trainer_utils.py
